--- a/pages/videos.html
+++ b/pages/videos.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <img src="../assets/icons/logoKeane.svg" alt="Logo" class="logo">
+        <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo" class="logo"></a>
         <nav>
             <ul>
                 <li><a href="../index.html">HOME</a></li>
