--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,29 +29,29 @@
         <h1>CONTACT</h1>
         <section>
             <h3>Dejanos tu consulta y te estaremos respondiendo a la brevedad.</h3>
-            <br>
+            <img class="fotosDeCostado" src="../assets/img/fondoContact.png" alt="Foto de pajaro y Guardian">
+
             <form action="/submit" method="post">
                 <label for="nombre">Nombre</label>
                 <br>
                 <input type="text" id="nombre" name="nombre" placeholder="Escribe aquí tu nombre" required>
-                <br><br>
+                <br>
                 <label for="email">Email</label>
                 <br>
                 <input type="email" id="email" name="email" placeholder="Dejanos tu email aquí" required>
-                <br><br>
+                <br>
                 <label for="mensaje">Mensaje</label>
                 <br>
                 <textarea id="mensaje" name="mensaje" witdh="30%" placeholder="Escribe aquí tu mensaje"
                     required></textarea>
-                <br><br>
+                <br>
                 <button class="boton" type="submit">Enviar</button>
             </form>
         </section>
-        <img class="fotosDeCostado" src="../assets/img/fondoContact.png" alt="Foto de pajaro y Guardian">
     </main>
 
     <footer>
-        <p>Todos los derechos reservados a Keane© 2025 - Diseño Web por Tam S. C.</p>
+        <p>Todos los derechos reservados a Keane© 2025 <br> Diseño Web por Tam S. C.</p>
         <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
                 src="../assets/icons/youtube.png" alt="Icono Youtube"></a>
         <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
@@ -60,7 +60,6 @@
                 alt="Icono Instagram"></a>
         <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
                 alt="Icono X - Twitter"></a>
-        <br>
         <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
     </footer>
 
