--- a/pages/tour.html
+++ b/pages/tour.html
@@ -28,12 +28,12 @@
     <main>
         <h1>TOUR</h1>
         <section>
+            <img class="fotosDeCostado" src="../assets/img/fondoTour.png" alt="Foto de Pajaro y Torre">
+
             <article class="tour">
                 <h2>PRÓXIMOS CONCIERTOS</h2>
                 <ul>
-                    <br>
                     <h3>2025</h3>
-                    <br>
                     <li>12 Marzo - Monterrey, MX -> <a href="https://www.keanemusic.com/live/">Tickets</a></li>
                     <li>14 Marzo - Merida, MX -> <a href="https://www.keanemusic.com/live/">Tickets</a></li>
                     <li>16 Marzo - Mexico City, MX -> <a href="https://www.keanemusic.com/live/">Tickets</a></li>
@@ -42,13 +42,10 @@
                     <li>15 abril - Madrid, España -> <a href="https://www.keanemusic.com/live/">Tickets</a></li>
                 </ul>
             </article>
-            <br>
             <article class="tour">
                 <h2>CONCIERTOS PASADOS</h2>
                 <ul>
-                    <br>
                     <h3>2024</h3>
-                    <br>
                     <li>23 Nov - Bogota, Colombia -> <a href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
                     <li>21 Nov - Lima, Peru -> <a href="https://www.keanemusic.com/live-archive/">Ver Fotos</a></li>
@@ -63,11 +60,10 @@
                 </ul>
             </article>
         </section>
-        <img class="fotosDeCostado" src="../assets/img/fondoTour.png" alt="Foto de Pajaro y Torre">
     </main>
 
     <footer>
-        <p>Todos los derechos reservados a Keane© 2025 - Diseño Web por Tam S. C.</p>
+        <p>Todos los derechos reservados a Keane© 2025 <br> Diseño Web por Tam S. C.</p>
         <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
                 src="../assets/icons/youtube.png" alt="Icono Youtube"></a>
         <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
@@ -76,7 +72,6 @@
                 alt="Icono Instagram"></a>
         <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
                 alt="Icono X - Twitter"></a>
-        <br>
         <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
     </footer>
 
