--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,7 +27,7 @@
 
     <main>
         <h1>CONTACT</h1>
-        <section>
+        <section class="container-contact-tour">
             <h3>Dejanos tu consulta y te estaremos respondiendo a la brevedad.</h3>
             <img class="fotosDeCostado" src="../assets/img/fondoContact.png" alt="Foto de pajaro y Guardian">
 
