--- a/pages/tour.html
+++ b/pages/tour.html
@@ -27,7 +27,7 @@
 
     <main>
         <h1>TOUR</h1>
-        <section>
+        <section class="container-contact-tour">
             <img class="fotosDeCostado" src="../assets/img/fondoTour.png" alt="Foto de Pajaro y Torre">
 
             <article class="tour">
