--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-        <p>Todos los derechos reservados a Keane© 2025 - Diseño Web por Tam S. C.</p>
+        <p>Todos los derechos reservados a Keane© 2025 <br> Diseño Web por Tam S. C.</p>
         <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
                 src="./assets/icons/youtube.png" alt="Icono Youtube"></a>
         <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
