--- a/pages/tour.html
+++ b/pages/tour.html
@@ -27,9 +27,7 @@
 
     <main>
         <h1>TOUR</h1>
-        <section class="container-contact-tour">
-            <img class="fotosDeCostado" src="../assets/img/fondoTour.png" alt="Foto de Pajaro y Torre">
-
+        <section class="tour-background">
             <article class="tour">
                 <h2>PRÓXIMOS CONCIERTOS</h2>
                 <ul>
