--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="icon" href="../assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
     <title>KEANE</title>
@@ -28,7 +29,7 @@
     <main >
         <h1>CONTACT</h1>
         <section class="contact-background">
-            <h3>Dejan tu consulta y te estaremos <br> respondiendo a la brevedad.</h3>
+            <h3>Dejanos tu consulta <br> y responderemos <br>a la brevedad.</h3>
        
             <form action="/submit" method="post">
                 <label for="nombre">Nombre</label>
@@ -60,6 +61,8 @@
                 alt="Icono X - Twitter"></a>
         <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 
