--- a/pages/tour.html
+++ b/pages/tour.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="icon" href="../assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
     <title>KEANE</title>
@@ -13,15 +14,41 @@
 <body>
 
     <header>
-        <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo" class="logo"></a>
-        <nav>
-            <ul>
-                <li><a href="../index.html">HOME</a></li>
-                <li><a href="./tour.html">TOUR</a></li>
-                <li><a href="./videos.html">VIDEOS</a></li>
-                <li><a href="./music.html">MUSIC</a></li>
-                <li><a href="./contact.html">CONTACT</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-md ">
+            <div class="container">
+
+                <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo" class="logo"></a>
+
+                <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-2">
+
+                        <li class="listaNavbar">
+                            <a class="botonNavBar" href="../index.html">HOME</a>
+                        </li>
+                        <li class="listaNavbar">
+                            <a class="botonNavBar active" aria-current="page" href="./tour.html">TOUR</a>
+                        </li>
+                        <li class="listaNavbar">
+                            <a class="botonNavBar" href="./videos.html">VIDEOS</a>
+                        </li>
+                        <li class="listaNavbar">
+                            <a class="botonNavBar" href="./music.html">MUSIC</a>
+                        </li>
+                        <li class="listaNavbar">
+                            <a class="botonNavBar" href="./contact.html">CONTACT</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </div>
         </nav>
         <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo">
     </header>
@@ -33,28 +60,28 @@
                 <h2>PRÓXIMOS CONCIERTOS</h2>
                 <ul>
                     <h3>2025</h3>
-                    <li>12 Marzo - Monterrey, MX -> <a href="https://www.keanemusic.com/live/">Tickets</a></li>
-                    <li>14 Marzo - Merida, MX -> <a href="https://www.keanemusic.com/live/">Tickets</a></li>
-                    <li>16 Marzo - Mexico City, MX -> <a href="https://www.keanemusic.com/live/">Tickets</a></li>
-                    <li>10 abril - Londres, UK -> <a href="https://www.keanemusic.com/live/">Tickets</a></li>
-                    <li>12 abril - París, Francia -> <a href="https://www.keanemusic.com/live/">Tickets</a></li>
-                    <li>15 abril - Madrid, España -> <a href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">12 Marzo - Monterrey, MX -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">14 Marzo - Merida, MX -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">16 Marzo - Mexico City, MX -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">10 abril - Londres, UK -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">12 abril - París, Francia -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">15 abril - Madrid, España -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
                 </ul>
             </article>
             <article class="tour">
                 <h2>CONCIERTOS PASADOS</h2>
                 <ul>
                     <h3>2024</h3>
-                    <li>23 Nov - Bogota, Colombia -> <a href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    <li class="listaTour">23 Nov - Bogota, Colombia -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
-                    <li>21 Nov - Lima, Peru -> <a href="https://www.keanemusic.com/live-archive/">Ver Fotos</a></li>
-                    <li>19 Nov - Santiago, Chile -> <a href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    <li class="listaTour">21 Nov - Lima, Peru -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a></li>
+                    <li class="listaTour">19 Nov - Santiago, Chile -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
-                    <li>16 Nov - Asuncion, Paraguay -> <a href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    <li class="listaTour">16 Nov - Asuncion, Paraguay -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
-                    <li>14 Nov - Bs. As., Argentina -> <a href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    <li class="listaTour">14 Nov - Bs. As., Argentina -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
-                    <li>12 Nov - Montevideo, Uruguay -> <a href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    <li class="listaTour">12 Nov - Montevideo, Uruguay -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
                 </ul>
             </article>
@@ -74,7 +101,9 @@
         <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
