--- a/index.html
+++ b/index.html
@@ -53,31 +53,44 @@
 
     <main>
         <h1>¡¡BIENVENIDOS!!</h1>
-        <section>
-            <h2>BREVE BIOGRAFÍA E HISTORIA DE LA BANDA</h2>
-            <article class="articulos">
-                <h3>COMIENZOS</h3>
-                <p>Keane es una banda inglesa de rock alternativo, formada en 1995, procedente de Battle, East Sussex,
-                    en el sureste de Inglaterra. Sus primeros 4 álbumes en estudio, <span class="discos">Hopes and
-                        Fears</span> (2004), <span class="discos">Under the
-                        Iron Sea</span> (2006), <span class="discos">Perfect Symmetry</span> (2008), <span
-                        class="discos">Strangeland</span> (2012) fueron directos al número 1 de la
-                    lista británica de ventas UK Albums Chart.
-                    Inmediatamente después de su lanzamiento consiguiendo cerca de 10 millones de discos vendidos en
-                    total.</p>
-                <img class="fotosBio" src="./assets/img/keane.jpg" alt="Foto de la banda">
+        <section class="bioContainer">
+            <h2 class="bioTitulo">BREVE BIOGRAFÍA E HISTORIA DE LA BANDA</h2>
+            <article class="articulos" id="articulo1">
+                <div class="art">
+                    <h3>COMIENZOS</h3>
+                    <p>Keane es una banda inglesa de rock alternativo, formada en 1995, procedente de Battle, East
+                        Sussex,
+                        en el sureste de Inglaterra. Sus primeros 4 álbumes en estudio, <span class="discos">Hopes and
+                            Fears</span> (2004), <span class="discos">Under the
+                            Iron Sea</span> (2006), <span class="discos">Perfect Symmetry</span> (2008), <span
+                            class="discos">Strangeland</span> (2012) fueron directos al número 1 de la
+                        lista británica de ventas UK Albums Chart.
+                        Inmediatamente después de su lanzamiento consiguiendo cerca de 10 millones de discos vendidos en
+                        total.</p>
+                </div>
+                <figure class="pictureBio">
+                    <img class="fotosBio" src="./assets/img/keane.jpg" alt="Foto de la banda" id="foto1">
+                </figure>
             </article>
 
-            <article class="articulos">
-                <h3>REENCUENTRO</h3>
-                <p>Estuvieron separados de manera temporal desde 2014 hasta enero de 2019. Pero el 17 de enero de 2019,
-                    un artículo del periódico "The Sun" reveló que la banda está planeando "regresar después de seis
-                    años de distancia" y que "una fuente cercana a los rockeros ha revelado que la banda está lista para
-                    trabajar de nuevo después de "poner sus diferencias a un lado". El 30 de mayo de 2019, se reveló que
-                    el nuevo álbum se llama <span class="discos">Cause and Effect</span>. Una semana después, el 6 de
-                    junio de 2019, la banda lanzó el primer sencillo del álbum, titulado "The Way I Feel".</p>
-                <img class="fotosBio" src="./assets/img/keane1.jpg" alt="Foto de la banda">
-            </article>
+            <div class="articulos" id="articulo2">
+                <div class="art">
+                    <h3>REENCUENTRO</h3>
+                    <p>Estuvieron separados de manera temporal desde 2014 hasta enero de 2019. Pero el 17 de enero de
+                        2019,
+                        un artículo del periódico "The Sun" reveló que la banda está planeando "regresar después de seis
+                        años de distancia" y que "una fuente cercana a los rockeros ha revelado que la banda está lista
+                        para
+                        trabajar de nuevo después de "poner sus diferencias a un lado". El 30 de mayo de 2019, se reveló
+                        que
+                        el nuevo álbum se llama <span class="discos">Cause and Effect</span>. Una semana después, el 6
+                        de
+                        junio de 2019, la banda lanzó el primer sencillo del álbum, titulado "The Way I Feel".</p>
+                </div>
+                <figure class="pictureBio">
+                    <img class="fotosBio" src="./assets/img/keane1.jpg" alt="Foto de la banda" id="foto2">
+                </figure>
+                </article>
         </section>
     </main>
 
