edit readme con fotos

--- a/pages/tour.html
+++ b/pages/tour.html
@@ -60,28 +60,41 @@
                 <h2>PRÓXIMOS CONCIERTOS</h2>
                 <ul>
                     <h3>2025</h3>
-                    <li class="listaTour">12 Marzo - Monterrey, MX -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
-                    <li class="listaTour">14 Marzo - Merida, MX -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
-                    <li class="listaTour">16 Marzo - Mexico City, MX -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
-                    <li class="listaTour">10 abril - Londres, UK -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
-                    <li class="listaTour">12 abril - París, Francia -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
-                    <li class="listaTour">15 abril - Madrid, España -> <a class="botonListaTour" href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">12 Marzo - Monterrey, MX -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">14 Marzo - Merida, MX -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">16 Marzo - Mexico City, MX -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">10 abril - Londres, UK -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">12 abril - París, Francia -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live/">Tickets</a></li>
+                    <li class="listaTour">15 abril - Madrid, España -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live/">Tickets</a></li>
                 </ul>
             </article>
+
             <article class="tour">
                 <h2>CONCIERTOS PASADOS</h2>
                 <ul>
                     <h3>2024</h3>
-                    <li class="listaTour">23 Nov - Bogota, Colombia -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    <li class="listaTour">23 Nov - Bogota, Colombia -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
-                    <li class="listaTour">21 Nov - Lima, Peru -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a></li>
-                    <li class="listaTour">19 Nov - Santiago, Chile -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    <li class="listaTour">21 Nov - Lima, Peru -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a></li>
+                    <li class="listaTour">19 Nov - Santiago, Chile -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
-                    <li class="listaTour">16 Nov - Asuncion, Paraguay -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    <li class="listaTour">16 Nov - Asuncion, Paraguay -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
-                    <li class="listaTour">14 Nov - Bs. As., Argentina -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    <li class="listaTour">14 Nov - Bs. As., Argentina -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
-                    <li class="listaTour">12 Nov - Montevideo, Uruguay -> <a class="botonListaTour" href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    <li class="listaTour">12 Nov - Montevideo, Uruguay -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
                 </ul>
             </article>
