--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <div class="collapse navbar-collapse listContainer" id="navbarTogglerDemo01">
 
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-2">
+                    <ul class="navbar-nav mb-2 mb-lg-2">
+
 
                         <li class="listaNavbar">
                             <a class="botonNavBar active" aria-current="page" href="./index.html">HOME</a>
