--- a/pages/tour.html
+++ b/pages/tour.html
@@ -25,9 +25,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <div class="collapse navbar-collapse listContainer" id="navbarTogglerDemo01">
 
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-2">
+                    <ul class="navbar-nav mb-2 mb-lg-2">
 
                         <li class="listaNavbar">
                             <a class="botonNavBar" href="../index.html">HOME</a>
