--- a/pages/tour.html
+++ b/pages/tour.html
@@ -56,9 +56,10 @@
     <main>
         <h1>TOUR</h1>
         <section class="tour-background">
+                
             <article class="tour">
                 <h2>PRÓXIMOS CONCIERTOS</h2>
-                <ul>
+                <ul class="ulTour">
                     <h3>2025</h3>
                     <li class="listaTour">12 Marzo - Monterrey, MX -> <a class="botonListaTour"
                             href="https://www.keanemusic.com/live/">Tickets</a></li>
@@ -77,7 +78,7 @@
 
             <article class="tour">
                 <h2>CONCIERTOS PASADOS</h2>
-                <ul>
+                <ul class="ulTour">
                     <h3>2024</h3>
                     <li class="listaTour">23 Nov - Bogota, Colombia -> <a class="botonListaTour"
                             href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
@@ -94,6 +95,27 @@
                             href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
                     <li class="listaTour">12 Nov - Montevideo, Uruguay -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    </li>
+                </ul>
+  
+                <ul class="ulTour">
+                    <h3>2023</h3>
+                    <li class="listaTour">23 Sept - Bogota, Colombia -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    </li>
+                    <li class="listaTour">21 Sept - Lima, Peru -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a></li>
+                    <li class="listaTour">19 Sept - Santiago, Chile -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    </li>
+                    <li class="listaTour">16 Sept - Asuncion, Paraguay -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    </li>
+                    <li class="listaTour">14 Sept - Bs. As., Argentina -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    </li>
+                    <li class="listaTour">12 Sept - Montevideo, Uruguay -> <a class="botonListaTour"
                             href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
                 </ul>
