--- a/pages/videos.html
+++ b/pages/videos.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="icon" href="../assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
     <title>KEANE</title>
@@ -54,24 +55,71 @@
         <h1>VIDEOS</h1>
         <section>
             <h2>VideoClips ordenados por álbum y año de lanzamiento</h2>
+
+
             <article>
                 <h3>Hopes & Fears - 2004</h3>
-                <iframe class="videoEdit" src="https://mover.uz/video/embed/q0Gg532j" frameborder="0"
-                    allowfullscreen></iframe>
-                <iframe class="videoEdit" src="https://mover.uz/video/embed/LZuQW32j" frameborder="0"
-                    allowfullscreen></iframe>
-                <iframe class="videoEdit" src="https://mover.uz/video/embed/n6Ty532j" frameborder="0"
-                    allowfullscreen></iframe>
+                <div id="carouselExampleCaptions1" class="carousel slide">
+                    <div class="carousel-indicators indicadores">
+                        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="0"
+                            class="active" aria-current="true"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="2"></button>
+                    </div>
+                    <div class="carousel-inner musicItem">
+                        <div class="carousel-item active">
+                            <iframe class="videoEdit" src="https://mover.uz/video/embed/q0Gg532j" frameborder="0"
+                                allowfullscreen></iframe>
+                        </div>
+                        <div class="carousel-item">
+                            <iframe class="videoEdit" src="https://mover.uz/video/embed/LZuQW32j" frameborder="0"
+                                allowfullscreen></iframe>
+                        </div>
+                        <div class="carousel-item">
+                            <iframe class="videoEdit" src="https://mover.uz/video/embed/n6Ty532j" frameborder="0"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev arrow" type="button" data-bs-target="#carouselExampleCaptions1"
+                        data-bs-slide="prev">
+                        < </button>
+                            <button class="carousel-control-next arrow" type="button"
+                                data-bs-target="#carouselExampleCaptions1" data-bs-slide="next"> > </button>
+                </div>
             </article>
+
+
             <article>
                 <h3>Under The Iron Sea - 2006</h3>
-                <iframe class="videoEdit" src="https://mover.uz/video/embed/o0tE532j" frameborder="0"
-                    allowfullscreen></iframe>
-                <iframe class="videoEdit" src="https://mover.uz/video/embed/0wki532j" frameborder="0"
-                    allowfullscreen></iframe>
-                <iframe class="videoEdit" src="https://mover.uz/video/embed/i0Xqu32j" frameborder="0"
-                    allowfullscreen></iframe>
+                <div id="carouselExampleCaptions2" class="carousel slide">
+                    <div class="carousel-indicators indicadores">
+                        <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="0"
+                            class="active" aria-current="true"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="2"></button>
+                    </div>
+                    <div class="carousel-inner musicItem">
+                        <div class="carousel-item active">
+                            <iframe class="videoEdit" src="https://mover.uz/video/embed/o0tE532j" frameborder="0"
+                                allowfullscreen></iframe>
+                        </div>
+                        <div class="carousel-item">
+                            <iframe class="videoEdit" src="https://mover.uz/video/embed/0wki532j" frameborder="0"
+                                allowfullscreen></iframe>
+                        </div>
+                        <div class="carousel-item">
+                            <iframe class="videoEdit" src="https://mover.uz/video/embed/i0Xqu32j" frameborder="0"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev arrow" type="button" data-bs-target="#carouselExampleCaptions2"
+                        data-bs-slide="prev">
+                        < </button>
+                            <button class="carousel-control-next arrow" type="button"
+                                data-bs-target="#carouselExampleCaptions2" data-bs-slide="next"> > </button>
+                </div>
             </article>
+
         </section>
     </main>
 
@@ -88,7 +136,9 @@
         <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
