edit readme, tour y mas info en index

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <h1>¡¡BIENVENIDOS!!</h1>
         <section class="bioContainer">
             <h2 class="bioTitulo">BREVE BIOGRAFÍA E HISTORIA DE LA BANDA</h2>
+
             <article class="articulos" id="articulo1">
                 <div class="art">
                     <h3>COMIENZOS</h3>
@@ -74,24 +75,55 @@
                 </figure>
             </article>
 
-            <div class="articulos" id="articulo2">
+            <article class="articulos" id="articulo2">
+                <figure class="pictureBio">
+                    <img class="fotosBio" src="./assets/img/keaneBanda.png" alt="Foto de la banda" id="foto2">
+                </figure>
                 <div class="art">
-                    <h3>REENCUENTRO</h3>
-                    <p>Estuvieron separados de manera temporal desde 2014 hasta enero de 2019. Pero el 17 de enero de
-                        2019,
-                        un artículo del periódico "The Sun" reveló que la banda está planeando "regresar después de seis
-                        años de distancia" y que "una fuente cercana a los rockeros ha revelado que la banda está lista
-                        para
-                        trabajar de nuevo después de "poner sus diferencias a un lado". El 30 de mayo de 2019, se reveló
-                        que
-                        el nuevo álbum se llama <span class="discos">Cause and Effect</span>. Una semana después, el 6
-                        de
-                        junio de 2019, la banda lanzó el primer sencillo del álbum, titulado "The Way I Feel".</p>
+                    <h3>Primeros años (1995-1999)</h3>
+                    <p>El deseo de formar un grupo apareció cuando Rice-Oxley aún se encontraba estudiando la escuela
+                        secundaria en Tonbridge. Pero recién estudiando la carrera de Humanidades en la University
+                        College London en 1995, Rice-Oxley formó un grupo de rock con su
+                        amigo Dominic Scott e invitaron a Richard a tocar la batería. Comenzaron como una banda de
+                        covers, tocando canciones de sus artistas favoritos, incluyendo U2, Oasis y The Beatles,
+                        ensayando en sus casas.</p>
                 </div>
+            </article>
+
+            <article class="articulos" id="articulo3">
+                <div class="art">
+                    <h3>Se une Tom, se va Scott</h3>
+                    <p>Chaplin se unió al grupo en 1997 y se encargó de la voz y la guitarra acústica. La unión de Tom a la banda también marcó un cambio de nombre, de "The Lotus Eaters" a "Cherry Keane", en honor a una amiga de la madre de Tom, a quien Tim y Tom conocieron de pequeños y quien fue una gran influencia en sus vidas. El nombre fue acortado a "Keane" pronto. En 1999 y sin un contrato discográfico, grabaron su primer sencillo, <span class="discos">"Call Me What You Like"</span>. Debido al limitado éxito que estaban teniendo, Scott decidió abandonar el grupo un mes después de que su segundo sencillo fuera lanzado en febrero del 2001, <span class="discos">"Wolf At The Door".</span></p>
+                </div>
+                <figure class="pictureBio">
+                    <img class="fotosBio" src="./assets/img/scott.png" alt="Foto de la banda con Scott" id="foto1">
+                </figure>
+            </article>
+
+            <article class="articulos" id="articulo4">
                 <figure class="pictureBio">
                     <img class="fotosBio" src="./assets/img/keane1.jpg" alt="Foto de la banda" id="foto2">
                 </figure>
-                </article>
+                <div class="art">
+                    <h3>REENCUENTRO</h3>
+                    <p>Estuvieron separados de manera temporal desde 2014 hasta enero de 2019. Pero el 17 de enero
+                        de
+                        2019,
+                        un artículo del periódico "The Sun" reveló que la banda está planeando "regresar después de
+                        seis
+                        años de distancia" y que "una fuente cercana a los rockeros ha revelado que la banda está
+                        lista
+                        para
+                        trabajar de nuevo después de "poner sus diferencias a un lado". El 30 de mayo de 2019, se
+                        reveló
+                        que
+                        el nuevo álbum se llama <span class="discos">Cause and Effect</span>. Una semana después, el
+                        6
+                        de
+                        junio de 2019, la banda lanzó el primer sencillo del álbum, titulado "The Way I Feel".</p>
+                </div>
+            </article>
+
         </section>
     </main>
 
