--- a/index.html
+++ b/index.html
@@ -63,12 +63,8 @@
                     <p>Keane es una banda inglesa de rock alternativo, formada en 1995, procedente de Battle, East
                         Sussex,
                         en el sureste de Inglaterra. Sus primeros 4 álbumes en estudio, <span class="discos">Hopes and
-                            Fears</span> (2004), <span class="discos">Under the
-                            Iron Sea</span> (2006), <span class="discos">Perfect Symmetry</span> (2008), <span
-                            class="discos">Strangeland</span> (2012) fueron directos al número 1 de la
-                        lista británica de ventas UK Albums Chart.
-                        Inmediatamente después de su lanzamiento consiguiendo cerca de 10 millones de discos vendidos en
-                        total.</p>
+                        Fears</span> (2004), <span class="discos">Under the Iron Sea</span> (2006), <span class="discos">Perfect Symmetry</span> (2008), <span class="discos">Strangeland</span> (2012) fueron directos al número 1 de la
+                        lista británica de ventas UK Albums Chart. Inmediatamente después de su lanzamiento consiguiendo cerca de 10 millones de discos vendidos en total.</p>
                 </div>
                 <figure class="pictureBio">
                     <img class="fotosBio" src="./assets/img/keane.jpg" alt="Foto de la banda" id="foto1">
@@ -83,17 +79,23 @@
                     <h3>Primeros años (1995-1999)</h3>
                     <p>El deseo de formar un grupo apareció cuando Rice-Oxley aún se encontraba estudiando la escuela
                         secundaria en Tonbridge. Pero recién estudiando la carrera de Humanidades en la University
-                        College London en 1995, Rice-Oxley formó un grupo de rock con su
-                        amigo Dominic Scott e invitaron a Richard a tocar la batería. Comenzaron como una banda de
-                        covers, tocando canciones de sus artistas favoritos, incluyendo U2, Oasis y The Beatles,
-                        ensayando en sus casas.</p>
+                        College London en 1995, Rice-Oxley formó un grupo de rock con su amigo Dominic Scott e invitaron
+                        a Richard a tocar la batería. Comenzaron como una banda de covers, tocando canciones de sus
+                        artistas favoritos, incluyendo U2, Oasis y The Beatles, ensayando en sus casas.</p>
                 </div>
             </article>
 
             <article class="articulos" id="articulo3">
                 <div class="art">
                     <h3>Se une Tom, se va Scott</h3>
-                    <p>Chaplin se unió al grupo en 1997 y se encargó de la voz y la guitarra acústica. La unión de Tom a la banda también marcó un cambio de nombre, de "The Lotus Eaters" a "Cherry Keane", en honor a una amiga de la madre de Tom, a quien Tim y Tom conocieron de pequeños y quien fue una gran influencia en sus vidas. El nombre fue acortado a "Keane" pronto. En 1999 y sin un contrato discográfico, grabaron su primer sencillo, <span class="discos">"Call Me What You Like"</span>. Debido al limitado éxito que estaban teniendo, Scott decidió abandonar el grupo un mes después de que su segundo sencillo fuera lanzado en febrero del 2001, <span class="discos">"Wolf At The Door".</span></p>
+                    <p>Chaplin se unió al grupo en 1997 y se encargó de la voz y la guitarra acústica. La unión de Tom a
+                        la banda también marcó un cambio de nombre, de "The Lotus Eaters" a "Cherry Keane", en honor a
+                        una amiga de la madre de Tom, a quien Tim y Tom conocieron de pequeños y quien fue una gran
+                        influencia en sus vidas. El nombre fue acortado a "Keane" pronto. En 1999 y sin un contrato
+                        discográfico, grabaron su primer sencillo, <span class="discos">"Call Me What You Like"</span>.
+                        Debido al limitado éxito que estaban teniendo, Scott decidió abandonar el grupo un mes después
+                        de que su segundo sencillo fuera lanzado en febrero del 2001, <span class="discos">"Wolf At The
+                            Door".</span></p>
                 </div>
                 <figure class="pictureBio">
                     <img class="fotosBio" src="./assets/img/scott.png" alt="Foto de la banda con Scott" id="foto1">
@@ -107,20 +109,14 @@
                 <div class="art">
                     <h3>REENCUENTRO</h3>
                     <p>Estuvieron separados de manera temporal desde 2014 hasta enero de 2019. Pero el 17 de enero
-                        de
-                        2019,
-                        un artículo del periódico "The Sun" reveló que la banda está planeando "regresar después de
-                        seis
-                        años de distancia" y que "una fuente cercana a los rockeros ha revelado que la banda está
-                        lista
-                        para
-                        trabajar de nuevo después de "poner sus diferencias a un lado". El 30 de mayo de 2019, se
-                        reveló
-                        que
-                        el nuevo álbum se llama <span class="discos">Cause and Effect</span>. Una semana después, el
-                        6
-                        de
-                        junio de 2019, la banda lanzó el primer sencillo del álbum, titulado "The Way I Feel".</p>
+                        de 2019, un artículo del periódico "The Sun" reveló que la banda está planeando "regresar
+                        después de
+                        seis años de distancia" y que "una fuente cercana a los rockeros ha revelado que la banda está
+                        lista para trabajar de nuevo después de "poner sus diferencias a un lado". El 30 de mayo de
+                        2019, se
+                        reveló que el nuevo álbum se llama <span class="discos">Cause and Effect</span>. Una semana
+                        después, el
+                        6 de junio de 2019, la banda lanzó el primer sencillo del álbum, titulado "The Way I Feel".</p>
                 </div>
             </article>
 
