--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,8 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- CSS Styles -->
     <link rel="stylesheet" href="../styles/styles.css">
+    <!-- Favicon -->
     <link rel="icon" href="../assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
     <title>KEANE</title>
 </head>
@@ -15,7 +23,8 @@
     <header>
         <nav class="navbar navbar-expand-md ">
             <div class="container">
-                <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo" class="logo"></a>
+                <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo"
+                        class="logo animate__animated animate__heartBeat"></a>
                 <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -54,8 +63,8 @@
         <h1>CONTACT</h1>
         <section class="contact-background">
             <h3>Dejanos tu consulta <br> y responderemos <br>a la brevedad.</h3>
-       
-            <form action="/submit" method="post">
+
+            <form action="/submit" method="post"  data-aos="fade-up" data-aos-duration="2000">
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" name="nombre" placeholder="Escribe aquí tu nombre" required>
 
@@ -66,7 +75,8 @@
                 <input type="email" id="email" name="email" placeholder="Dejanos tu email aquí" required>
 
                 <label for="mensaje">Mensaje</label>
-                <textarea id="mensaje" name="mensaje" witdh="30%" placeholder="Escribe aquí tu mensaje"required></textarea>
+                <textarea id="mensaje" name="mensaje" witdh="30%" placeholder="Escribe aquí tu mensaje"
+                    required></textarea>
 
                 <button class="boton" type="submit">Enviar</button>
             </form>
@@ -86,7 +96,16 @@
         <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
