--- a/pages/music.html
+++ b/pages/music.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- CSS Styles -->
     <link rel="stylesheet" href="../styles/styles.css">
+    <!-- Favicon -->
     <link rel="icon" href="../assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
     <title>KEANE</title>
 </head>
@@ -16,7 +23,8 @@
     <header>
         <nav class="navbar navbar-expand-md ">
             <div class="container">
-                <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo" class="logo"></a>
+                <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo"
+                        class="logo animate__animated animate__heartBeat"></a>
                 <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -52,11 +60,11 @@
     </header>
 
     <main>
-        <h1>MUSIC</h1>
+        <h1>MUSIC <img class="vinilo" src="../assets/img/vinilo.png" alt="Vinilo"></h1>
         <section>
             <h2>Canciones ordenadas por álbum y año de lanzamiento</h2>
 
-            <article>
+            <article data-aos="fade-up" data-aos-duration="2000">
                 <h3>Hopes & Fears - 2004</h3>
                 <div id="carouselExampleCaptions1" class="carousel slide">
                     <div class="carousel-indicators indicadores">
@@ -97,7 +105,7 @@
             </article>
 
 
-            <article>
+            <article data-aos="fade-up" data-aos-duration="2000">
                 <h3>Under The Iron Sea - 2006</h3>
                 <div id="carouselExampleCaptions2" class="carousel slide">
                     <div class="carousel-indicators indicadores">
@@ -138,7 +146,7 @@
             </article>
 
 
-            <article>
+            <article data-aos="fade-up" data-aos-duration="2000">
                 <h3>Perfect Symmetry - 2008</h3>
                 <div id="carouselExampleCaptions3" class="carousel slide">
                     <div class="carousel-indicators indicadores">
@@ -181,7 +189,7 @@
             </article>
 
 
-            <article>
+            <article data-aos="fade-up" data-aos-duration="2000">
                 <h3>Night Train - 2010</h3>
                 <div id="carouselExampleCaptions4" class="carousel slide">
                     <div class="carousel-indicators indicadores">
@@ -224,7 +232,7 @@
             </article>
 
 
-            <article>
+            <article data-aos="fade-up" data-aos-duration="2000">
                 <h3>Strangeland - 2012</h3>
                 <div id="carouselExampleCaptions5" class="carousel slide">
                     <div class="carousel-indicators indicadores">
@@ -267,7 +275,7 @@
             </article>
 
 
-            <article>
+            <article data-aos="fade-up" data-aos-duration="2000">
                 <h3>Cause and Effect - 2019</h3>
                 <div id="carouselExampleCaptions6" class="carousel slide">
                     <div class="carousel-indicators indicadores">
@@ -294,9 +302,10 @@
                         </div>
                         <div class="carousel-item">
                             <iframe class="musicEdit"
-                    src="https://open.spotify.com/embed/track/4UzRgkkgKbtnPbz3hBhyvS?utm_source=generator"
-                    frameBorder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                    loading="lazy"></iframe>
+                                src="https://open.spotify.com/embed/track/4UzRgkkgKbtnPbz3hBhyvS?utm_source=generator"
+                                frameBorder="0"
+                                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                                loading="lazy"></iframe>
                         </div>
                     </div>
 
@@ -324,9 +333,17 @@
         <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
     </footer>
 
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
 
 </body>
 
