--- a/pages/tour.html
+++ b/pages/tour.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- CSS Styles -->
     <link rel="stylesheet" href="../styles/styles.css">
+    <!-- Favicon -->
     <link rel="icon" href="../assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
     <title>KEANE</title>
 </head>
@@ -17,7 +24,8 @@
         <nav class="navbar navbar-expand-md ">
             <div class="container">
 
-                <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo" class="logo"></a>
+                <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo"
+                        class="logo animate__animated animate__heartBeat"></a>
 
                 <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -56,8 +64,8 @@
     <main>
         <h1>TOUR</h1>
         <section class="tour-background">
-                
-            <article class="tour">
+
+            <article class="tour"  data-aos="fade-up" data-aos-duration="2000">
                 <h2>PRÓXIMOS CONCIERTOS</h2>
                 <ul class="ulTour">
                     <h3>2025</h3>
@@ -76,7 +84,7 @@
                 </ul>
             </article>
 
-            <article class="tour">
+            <article class="tour"  data-aos="fade-up" data-aos-duration="2000">
                 <h2>CONCIERTOS PASADOS</h2>
                 <ul class="ulTour">
                     <h3>2024</h3>
@@ -95,8 +103,8 @@
                             href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
                 </ul>
-  
-                <ul class="ulTour">
+
+                <ul class="ulTour"  data-aos="fade-up" data-aos-duration="2000">
                     <h3>2023</h3>
                     <li class="listaTour">21 Sept - Lima, Peru -> <a class="botonListaTour"
                             href="https://www.keanemusic.com/live-archive/">Ver Fotos</a></li>
@@ -113,6 +121,25 @@
                             href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
                     </li>
                 </ul>
+
+                <ul class="ulTour"  data-aos="fade-up" data-aos-duration="2000">
+                    <h3>2022</h3>
+                    <li class="listaTour">21 Oct - Lima, Peru -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a></li>
+                    <li class="listaTour">19 Oct - Santiago, Chile -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    </li>
+                    <li class="listaTour">16 Oct - Asuncion, Paraguay -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    </li>
+                    <li class="listaTour">14 Oct - Bs. As., Argentina -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    </li>
+                    <li class="listaTour">12 Oct - Montevideo, Uruguay -> <a class="botonListaTour"
+                            href="https://www.keanemusic.com/live-archive/">Ver Fotos</a>
+                    </li>
+                </ul>
+
             </article>
         </section>
     </main>
@@ -130,9 +157,16 @@
         <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
     </footer>
 
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
