vaiven en img sobre en page Contact

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -60,7 +60,7 @@
     </header>
 
     <main>
-        <h1>CONTACT</h1>
+        <h1>CONTACT <img class="sobre" src="../assets/img/correo.png" alt="sobre"></h1>
         <section class="contact-background">
             <h3>Dejanos tu consulta <br> y responderemos <br>a la brevedad.</h3>
 
