keyframe vaiven en vhs, sobre, mano y microfono

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
 
     <main>
-        <h1>¡¡BIENVENIDOS!!</h1>
+        <h1>¡¡BIENVENIDOS!! <img class="mano" src="./assets/img/mano.svg" alt="mano"></h1>
         <section class="bioContainer">
             <h2 class="bioTitulo">BREVE BIOGRAFÍA E HISTORIA DE LA BANDA</h2>
 
