--- a/pages/videos.html
+++ b/pages/videos.html
@@ -60,7 +60,7 @@
     </header>
 
     <main>
-        <h1>VIDEOS</h1>
+        <h1>VIDEOS <img class="vhs" src="../assets/img/vhs.png" alt="vhs"></h1>
         <section>
             <h2>VideoClips ordenados por álbum y año de lanzamiento</h2>
 
