--- a/pages/tour.html
+++ b/pages/tour.html
@@ -62,7 +62,7 @@
     </header>
 
     <main>
-        <h1>TOUR</h1>
+        <h1>TOUR <img class="microfono" src="../assets/img/micro.png" alt="micro"></h1>
         <section class="tour-background">
 
             <article class="tour"  data-aos="fade-up" data-aos-duration="2000">
