edición ruta css

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- CSS Styles -->
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <!-- Favicon -->
-    <link rel="icon" href="../assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
+    <link rel="icon" href="./assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
     <title>KEANE</title>
 </head>
 
